@@ -1,0 +1,43 @@
+26429d84cffd0b0a0a2edebfc8fc7b5d *ChangeLog
+66a1cc5597f549e14f5012a3bd3120b2 *DESCRIPTION
+abec60d88d1030f3f51f3ece92263b04 *INDEX
+fd25eaa6c4bed89f8ed9ad5872413533 *NAMESPACE
+966cd63aa543742bea695363a5e8be27 *R/bpca.R
+d777861acef0c6c7f75e600778f7cbba *R/bpca.default.R
+55debf24f436d38d20ef9a6016d606fd *R/bpca.prcomp.R
+1dd8fde177e02d3e6f4dcda5efb240cd *R/dt.tools.R
+99e0379ceef696b723051f40d73b5a4f *R/plot.bpca.2d.R
+8bfb48299eee37a45979692642d301d6 *R/plot.bpca.3d.R
+7c43bdf494d4705e9492b5a77a3b985c *R/plot.qbpca.R
+5f6abb453024d8941942e33b20fca469 *R/qbpca.R
+fadf6b2ff9071102c3dbd000710abc0b *R/summary.bpca.R
+b380df46cfabc14cc9b4219231a53bb4 *R/var.rbf.R
+81a3710664384d2a2073c9cb29b765d2 *R/var.rdf.R
+b254ad972287e212356bec95d2e21eaf *data/gabriel1971.rda
+ce64647a991bf6e5b474c8d0599cd470 *data/gge2003.rda
+12a7d7e72ed4d071978afd2ffbc87c1b *demo/00Index
+b28b0216b07b63bdf667a84b0cfa631a *demo/bpca.R
+ac3dcaaf54f75536970d48a1268464f5 *demo/bpca.dinamic.3d.R
+fe34ecaf10aed15a353589322b2c90f9 *demo/bpca.lambda2_4.static.3d.R
+6bf8b7316b7c6912b82437675ff779e9 *demo/bpca.static.2d.R
+4245a545573f0ed33104ed9a0a36410e *demo/bpca.static.3d.R
+1d6f22f8e9aaf9aa5bc19e1093059811 *demo/dt.tools.R
+2af34abe7ea101b0dcc6b19c64b28fcb *demo/gge.check.R
+0bd9d4e217cb853abbb1a9990727a786 *demo/iris.R
+f7275d74150f4e21be2487e198e5a758 *demo/iris.var.rd.R
+dfd4aef7aca8ce4ba3b621805115bd1e *demo/rock.var.rd.R
+d415f281d12306658ad0bfb048d56e4d *demo/var.rb.2d.R
+2cfad3309454f5ff8acedb0411863dfa *demo/var.rb.3d.R
+281053ff3068c09f153bb44a6fad672c *demo/var.rd.2d.R
+5300abf3abe81e81d92691796ef8b1e2 *inst/CITATION
+22cf99b2ba2b69c72a3ba033eb960905 *man/bpca-package.Rd
+f905193531f04c9f4b3c9f56e4ec4cf9 *man/bpca.Rd
+5276918180c0a707b52bebf40ec4340c *man/dt.tools.Rd
+1fee99e6f70b4b470b0185103f072d2c *man/gabriel1971.Rd
+99a7a547e6ce9a9467c43bf776e866fb *man/gge2003.Rd
+1e300463be933a38c3a7e1e27edb8008 *man/plot.Rd
+cbefdfa1f07a4f4dd945c9f17cc7032c *man/qbpca.Rd
+d667e34248c00645bc364706a6ea02fd *man/summary.Rd
+4058fd22d013c56753fd1795d07f117e *man/var.rbf.Rd
+bcade2bb5b940b168e4f308679b1ec27 *man/var.rdf.Rd
+108e000b46a121724b154ef0899693a3 *pdf/bpca-manual.pdf
