@@ -1,3 +1,9 @@
+2012-02-20 vs. 1.0-10 - Jose Claudio Faria  <joseclaudio.faria@gmail.com>
+	* It was made cosmetic changes in the plot.bpca.3d
+
+2011-08-22 vs. 1.0-9 - Jose Claudio Faria  <joseclaudio.faria@gmail.com>
+	* It was made cosmetic changes in the summary
+
 2011-04-21 vs. 1.0-8 - Jose Claudio Faria  <joseclaudio.faria@gmail.com>
 	* It was made cosmetic changes in the documentation
 
